Refactored appointment report output for better readability, restricted physiotherapists to one expertise with matching treatment, and initialized 15 sample patients with cleaned-up phone numbers.